Added FactoryController and MqttClientWrapper classes to cleanly manage MQTT connections and sensor data processing. Main app now subscribes to temperature sensor and reacts by sending actuator commands (e.g. fan ON) based on threshold logic.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,8 @@
 
 project(SmartFactorySim VERSION 0.1 LANGUAGES CXX)
 
+find_package(nlohmann_json CONFIG REQUIRED)
+
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 
@@ -17,12 +19,15 @@ link_directories(
 
 add_executable(smart_factory_sim
         src/main.cpp
+        src/FactoryController.cpp
+        src/MqttClientWrapper.cpp
 )
 
 target_link_libraries(smart_factory_sim PRIVATE
         paho-mqttpp3-static
         paho-mqtt3a-static
         ws2_32
+        nlohmann_json::nlohmann_json
 )
 
 
