Refactor: Extract MQTT logic into MqttClientWrapper to reduce main.cpp clutter
- Introduced MqttClientWrapper class to encapsulate MQTT client setup, connection, and message handling
- Simplified main.cpp to only initialize and start the MQTT client
- MqttClientWrapper delegates incoming messages to FactoryController for processing

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,6 +21,11 @@ add_executable(smart_factory_sim
         src/main.cpp
         src/FactoryController.cpp
         src/MqttClientWrapper.cpp
+        include/SensorMessage.h
+        include/MachineController.h
+        include/MqttClientWrapper.h
+        include/FactoryController.h
+        src/MachineController.cpp
 )
 
 target_link_libraries(smart_factory_sim PRIVATE
