--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,11 @@
 
 project(SmartFactorySim VERSION 0.1 LANGUAGES CXX)
 
+include(CTest)
+enable_testing()
+
+find_package(Catch2 CONFIG REQUIRED)
+
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
