Add unit tests for MachineController, TemperatureSensor, and FactoryController
- Split temperature-related logic into separate TemperatureSensor tests
- Added FactoryController tests including malformed topic handling
- Exposed internal state in MachineController via getters for testability
- Set up isolated Catch2-based test targets per module (machine, temp, factory)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,26 +2,27 @@
 
 project(SmartFactorySim VERSION 0.1 LANGUAGES CXX)
 
-include(CTest)
-enable_testing()
-
-find_package(Catch2 CONFIG REQUIRED)
-
+# Use C++17
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-# Find JSON lib via vcpkg
-find_package(nlohmann_json CONFIG REQUIRED)
+# Enable testing
+include(CTest)
+enable_testing()
 
-# Paths to third-party libs
+# vcpkg dependencies
+find_package(nlohmann_json CONFIG REQUIRED)
+find_package(Catch2 CONFIG REQUIRED)
+
+# Third-party paths
 set(PAHO_CPP_BUILD ${CMAKE_SOURCE_DIR}/third_party/paho.mqtt.cpp/build)
 set(PAHO_C_INSTALL ${CMAKE_SOURCE_DIR}/third_party/paho.mqtt.c/install)
 
-# Include paths
+# Include directories
 include_directories(
-        ${CMAKE_SOURCE_DIR}/include
-        ${CMAKE_SOURCE_DIR}/third_party/paho.mqtt.cpp/include
-        ${CMAKE_SOURCE_DIR}/third_party/paho.mqtt.c/src
+        ${PROJECT_SOURCE_DIR}/include
+        ${PROJECT_SOURCE_DIR}/third_party/paho.mqtt.cpp/include
+        ${PROJECT_SOURCE_DIR}/third_party/paho.mqtt.c/src
 )
 
 # Link directories
@@ -30,7 +31,7 @@ link_directories(
         ${PAHO_C_INSTALL}/lib
 )
 
-# Main executable
+# Main application executable
 add_executable(smart_factory_sim
         src/main.cpp
         src/FactoryController.cpp
@@ -42,10 +43,11 @@ add_executable(smart_factory_sim
         include/SensorMessage.h
 )
 
-# Link libraries
 target_link_libraries(smart_factory_sim PRIVATE
         paho-mqttpp3-static
         paho-mqtt3a-static
         ws2_32
         nlohmann_json::nlohmann_json
 )
+
+add_subdirectory(tests)
