Refactor controller hierarchy and fix instant persistence
- Refactored FactoryController and MachineController to use parent pointers for correct snapshotting and instant persistence of factory state after every machine update
- Changed all MachineController construction to require a FactoryController* parent pointer and ensured all machine updates route through the correct instance
- Updated all factory state restoration and snapshotting logic to always use the actual FactoryController-owned MachineController objects
- Fixed CMake configuration for tests to include correct source files (no more missing symbol link errors)
- Updated all relevant tests to construct MachineController with a parent pointer (dummy FactoryController) as required by new API
- Improved error handling and debug output in snapshot saving/loading code
- Removed accidental redeclaration of member variables in FactoryController
- No changes to Docker or deployment configuration

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -12,6 +12,7 @@ add_executable(machine_controller_tests
         ${PROJECT_SOURCE_DIR}/tests/MachineControllerTest.cpp
         ${PROJECT_SOURCE_DIR}/src/MachineController.cpp
         ${PROJECT_SOURCE_DIR}/src/Machine.cpp
+        ${PROJECT_SOURCE_DIR}/src/FactoryController.cpp
 )
 target_include_directories(machine_controller_tests PRIVATE ${PROJECT_SOURCE_DIR}/include)
 target_link_libraries(machine_controller_tests PRIVATE Catch2::Catch2WithMain)
@@ -66,6 +67,7 @@ add_executable(machine_state_tests
         ${PROJECT_SOURCE_DIR}/tests/MachineStateTest.cpp
         ${PROJECT_SOURCE_DIR}/src/MachineController.cpp
         ${PROJECT_SOURCE_DIR}/src/Machine.cpp
+        ${PROJECT_SOURCE_DIR}/src/FactoryController.cpp
 )
 
 target_include_directories(machine_state_tests PRIVATE ${PROJECT_SOURCE_DIR}/include)
