fix: implement async MQTT publishing with worker thread
- Created a dedicated thread for MQTT message publishing to prevent blocking
- Fixed threading issues in message_arrived and publishing functions
- Improved error handling for file operations in Docker environment
- Updated storage paths to use absolute Docker container paths (/app/storage)
- Fixed Docker user configuration for proper file permissions
- Added detailed logging for troubleshooting message publishing
- Enhanced error recovery for MQTT connection issues

Date: 2025-05-22

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,9 @@
     build:
       context: .
       dockerfile: Dockerfile
+    volumes:
+      - ./storage:/app/storage
+    user: "0:0"
     depends_on:
       - nodered
       - mosquitto
